Port to 1.20.4 + Neoforge. Bump Version 1.2.2 Fixed getting kicked from server for "flying" whilst server is paused.